--- a/src/app/layouts/nav-bar/nav-bar.component.html
+++ b/src/app/layouts/nav-bar/nav-bar.component.html
@@ -8,10 +8,8 @@
     [opened]="(isHandset$ | async) === false"
   >
     <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+    <mat-nav-list *ngFor="let item of navList">
+      <a mat-list-item [routerLink]="item.path">{{ item.name }}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -28,6 +26,6 @@
       <span>scorer</span>
     </mat-toolbar>
     <!-- Add Content Here -->
-    <app-summary></app-summary>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
