--- a/src/app/layouts/nav-bar/nav-bar.component.html
+++ b/src/app/layouts/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="(isHandset$ | async) === false"
   >
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar> <mat-icon>sports_cricket</mat-icon> Scorer </mat-toolbar>
     <mat-nav-list *ngFor="let item of navList">
       <a mat-list-item [routerLink]="item.path">{{ item.name }}</a>
     </mat-nav-list>
@@ -23,7 +23,6 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>scorer</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
