--- a/src/app/views/matches/matches.component.html
+++ b/src/app/views/matches/matches.component.html
@@ -1,1 +1,14 @@
+<app-type-form></app-type-form>
+
 <app-rules-form></app-rules-form>
+<app-players-form></app-players-form>
+
+<!-- <mat-grid-list cols="2">
+  <mat-grid-tile align="start"> <app-type-form></app-type-form> </mat-grid-tile>
+  <mat-grid-tile align="start">
+    <app-rules-form></app-rules-form>
+  </mat-grid-tile>
+  <mat-grid-tile align="start">
+    <app-players-form> </app-players-form
+  ></mat-grid-tile>
+</mat-grid-list> -->
