--- a/src/app/layouts/rules-form/rules-form.component.scss
+++ b/src/app/layouts/rules-form/rules-form.component.scss
@@ -24,9 +24,8 @@ fieldset {
   border: 2px solid #e0e0e0;
   border-radius: 5px;
   margin-left: 21px;
-  .mat-checkbox {
-    display: block;
-  }
+  display: flex;
+  flex-direction: column;
 }
 
 // ? Buttons
